--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "StatusBar": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
