--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "StatusBar": "^1.0.0"
   },
   "devDependencies": {
